# worldpopdash

./: .gitignore  README.mdx  config.py  main.py  pyproject.toml
data/: Canada.csv  China.csv  Great Britain.csv  India.csv  Japan.csv  South Africa.csv  USA.csv
locales/: country.en.yml  country.pt.yml  general.en.yml  general.pt.yml
src/components/: bar_chart.py  dd_country.py  dd_year.py  ids.py  layout.py  line_chart.py  scatter_chart.py
src/data/: api.py  loader.py  process.py  source.py
